// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CloudProviderSelection /> when quota request pending renders a spinnter 1`] = `
<Fragment>
  <PageTitle
    breadcrumbs={
      <Breadcrumbs
        path={
          Array [
            Object {
              "label": "Clusters",
            },
            Object {
              "label": "Create",
              "path": "/create",
            },
            Object {
              "label": "OpenShift Dedicated",
            },
          ]
        }
      />
    }
    title="Create an OpenShift Dedicated Cluster"
  />
  <PageSection>
    <Spinner
      centered={true}
    />
  </PageSection>
</Fragment>
`;

exports[`<CloudProviderSelection /> with aws quota and osd trial feature renders correctly 1`] = `
<Fragment>
  <PageTitle
    breadcrumbs={
      <Breadcrumbs
        path={
          Array [
            Object {
              "label": "Clusters",
            },
            Object {
              "label": "Create",
              "path": "/create",
            },
            Object {
              "label": "OpenShift Dedicated",
            },
          ]
        }
      />
    }
    title="Create an OpenShift Dedicated Cluster"
  />
  <PageSection>
    <Card>
      <div
        className="pf-c-content ocm-page"
      >
        <Title
          headingLevel="h3"
          size="2xl"
        >
          Select an infrastructure provider
        </Title>
        <div
          className="flex-container"
        >
          <Link
            className="infra-card create-cluster-card pf-c-card"
            to="/create/osd/aws"
          >
            <CardBadge
              isHidden={true}
            />
            <CardBody>
              <img
                alt="AWS"
                className="create-cluster-logo"
                src="test-file-stub"
              />
              <Title
                headingLevel="h5"
                size="lg"
              >
                Run on Amazon Web Services
              </Title>
            </CardBody>
          </Link>
          <Tooltip
            content="You do not have enough quota for this option. Contact sales to purchase additional quota."
          >
            <Card
              className="infra-card create-cluster-card card-disabled"
            >
              <CardBody>
                <img
                  alt="GCP"
                  className="create-cluster-logo"
                  src="test-file-stub"
                />
                <Title
                  headingLevel="h5"
                  size="lg"
                >
                  Run on Google Cloud Platform
                </Title>
              </CardBody>
            </Card>
          </Tooltip>
        </div>
      </div>
    </Card>
  </PageSection>
</Fragment>
`;

exports[`<CloudProviderSelection /> with aws quota renders correctly 1`] = `
<Fragment>
  <PageTitle
    breadcrumbs={
      <Breadcrumbs
        path={
          Array [
            Object {
              "label": "Clusters",
            },
            Object {
              "label": "Create",
              "path": "/create",
            },
            Object {
              "label": "OpenShift Dedicated",
            },
          ]
        }
      />
    }
    title="Create an OpenShift Dedicated Cluster"
  />
  <PageSection>
    <Card>
      <div
        className="pf-c-content ocm-page"
      >
        <Title
          headingLevel="h3"
          size="2xl"
        >
          Select an infrastructure provider
        </Title>
        <div
          className="flex-container"
        >
          <Link
            className="infra-card create-cluster-card pf-c-card"
            to="/create/osd/aws"
          >
            <CardBadge
              isHidden={true}
            />
            <CardBody>
              <img
                alt="AWS"
                className="create-cluster-logo"
                src="test-file-stub"
              />
              <Title
                headingLevel="h5"
                size="lg"
              >
                Run on Amazon Web Services
              </Title>
            </CardBody>
          </Link>
          <Tooltip
            content="You do not have enough quota for this option. Contact sales to purchase additional quota."
          >
            <Card
              className="infra-card create-cluster-card card-disabled"
            >
              <CardBody>
                <img
                  alt="GCP"
                  className="create-cluster-logo"
                  src="test-file-stub"
                />
                <Title
                  headingLevel="h5"
                  size="lg"
                >
                  Run on Google Cloud Platform
                </Title>
              </CardBody>
            </Card>
          </Tooltip>
        </div>
      </div>
    </Card>
  </PageSection>
</Fragment>
`;

exports[`<CloudProviderSelection /> with gcp quota renders correctly 1`] = `
<Fragment>
  <PageTitle
    breadcrumbs={
      <Breadcrumbs
        path={
          Array [
            Object {
              "label": "Clusters",
            },
            Object {
              "label": "Create",
              "path": "/create",
            },
            Object {
              "label": "OpenShift Dedicated",
            },
          ]
        }
      />
    }
    title="Create an OpenShift Dedicated Cluster"
  />
  <PageSection>
    <Card>
      <div
        className="pf-c-content ocm-page"
      >
        <Title
          headingLevel="h3"
          size="2xl"
        >
          Select an infrastructure provider
        </Title>
        <div
          className="flex-container"
        >
          <Tooltip
            content="You do not have enough quota for this option. Contact sales to purchase additional quota."
          >
            <Card
              className="infra-card create-cluster-card card-disabled"
            >
              <CardBody>
                <img
                  alt="AWS"
                  className="create-cluster-logo"
                  src="test-file-stub"
                />
                <Title
                  headingLevel="h5"
                  size="lg"
                >
                  Run on Amazon Web Services
                </Title>
              </CardBody>
            </Card>
          </Tooltip>
          <Link
            className="infra-card create-cluster-card pf-c-card"
            to="/create/osd/gcp"
          >
            <CardBody>
              <img
                alt="GCP"
                className="create-cluster-logo"
                src="test-file-stub"
              />
              <Title
                headingLevel="h5"
                size="lg"
              >
                Run on Google Cloud Platform
              </Title>
            </CardBody>
          </Link>
        </div>
      </div>
    </Card>
  </PageSection>
</Fragment>
`;

exports[`<CloudProviderSelection /> with no quota renders a redirect 1`] = `
<Redirect
  to="/create"
/>
`;
